# board-anon-bot

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
app/: config.py  main.py  states.py
app/db/: models.py  repositories.py  session.py
app/handlers/: admin.py  callbacks.py  user.py
app/keyboards/: admin.py  user.py
app/locales/: messages.py
app/services/: access.py  admin.py  posting.py  scopes.py  user.py  users.py
app/utils/: logging.py
tests/: test_posting_service.py  test_repository.py  test_service_layers.py
